feat: fix embeddium & update translate

--- a/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/create_things_and_misc/lang/zh_cn.json
+++ b/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/create_things_and_misc/lang/zh_cn.json
@@ -3,7 +3,7 @@
   "block.create_things_and_misc.andesite_casing_trapdoor": "安山机壳活板门",
   "block.create_things_and_misc.bamboo_sail": "竹风帆",
   "block.create_things_and_misc.birch_sail": "白桦木风帆",
-  "block.create_things_and_misc.blaze_ballon": "燃烧气球？",
+  "block.create_things_and_misc.blaze_ballon": "燃烧气球",
   "block.create_things_and_misc.brass_brick_slab": "黄铜砖台阶",
   "block.create_things_and_misc.brass_brick_stairs": "黄铜砖楼梯",
   "block.create_things_and_misc.brass_bricks": "黄铜砖",
@@ -34,7 +34,7 @@
   "block.create_things_and_misc.mangrove_sail": "红树木风帆",
   "block.create_things_and_misc.neon_tube_block": "霓虹管方块",
   "block.create_things_and_misc.oak_sail": "橡木风帆",
-  "block.create_things_and_misc.powdered_obsidian_block": "黑曜石粉？",
+  "block.create_things_and_misc.powdered_obsidian_block": "黑曜石粉块",
   "block.create_things_and_misc.ramboutan_sail": "红毛丹木风帆",
   "block.create_things_and_misc.redsing": "铁路标志牌",
   "block.create_things_and_misc.redsing_1": "铁路标志牌",
@@ -48,9 +48,9 @@
   "block.create_things_and_misc.sprinkleron": "打开的洒水器",
   "block.create_things_and_misc.spruce_sail": "云杉木风帆",
   "block.create_things_and_misc.sticky_launcher": "铜制黏性发射台",
-  "block.create_things_and_misc.sturdy_sheet_block": "坚固板块？",
-  "block.create_things_and_misc.sturdy_sheet_slab": "坚固板块台阶",
-  "block.create_things_and_misc.sturdy_sheet_slab_stairs": "坚固板块楼梯",
+  "block.create_things_and_misc.sturdy_sheet_block": "坚固板块",
+  "block.create_things_and_misc.sturdy_sheet_slab": "坚固板台阶",
+  "block.create_things_and_misc.sturdy_sheet_slab_stairs": "坚固板楼梯",
   "block.create_things_and_misc.train_buffer": "缓冲器",
   "block.create_things_and_misc.train_sing": "铁路标志牌 1",
   "block.create_things_and_misc.train_sing_2": "铁路标志牌 2",
@@ -64,7 +64,7 @@
   "block.create_things_and_misc.train_sing_yellow_5": "黄色铁路标志牌 5",
   "block.create_things_and_misc.train_stop": "阻车器",
   "block.create_things_and_misc.warped_sail": "诡异木风帆",
-  "entity.create_things_and_misc.balloon_blaze": "燃烧气球？",
+  "entity.create_things_and_misc.balloon_blaze": "燃烧气球",
   "entity.create_things_and_misc.sprinkler_head": "洒水器喷头",
   "entity.create_things_and_misc.sprinkler_radius": "洒水器半径",
   "fluid.create_things_and_misc.diluted_bonemeal": "液体骨粉",
