--- a/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/betterarcheology/lang/zh_cn.json
+++ b/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/betterarcheology/lang/zh_cn.json
@@ -1,88 +1,127 @@
 {
   "itemGroup.betterarcheology": "更好的考古学",
-  "block.betterarcheology.rotten_log": "腐朽原木",
-  "block.betterarcheology.rotten_planks": "腐朽木板",
-  "block.betterarcheology.rotten_slab": "腐朽木台阶",
-  "block.betterarcheology.rotten_stairs": "腐朽木楼梯",
-  "block.betterarcheology.rotten_fence": "腐朽木栅栏",
-  "block.betterarcheology.rotten_fence_gate": "腐朽木栅栏门",
-  "block.betterarcheology.rotten_trapdoor": "腐朽木活板门",
-  "block.betterarcheology.rotten_door": "腐朽木门",
-  "block.betterarcheology.infested_mud_bricks": "虫蚀泥砖",
+
+  "block.betterarcheology.rotten_log": "腐烂的原木",
+  "block.betterarcheology.rotten_planks": "腐烂的木板",
+  "block.betterarcheology.rotten_slab": "腐烂的台阶",
+  "block.betterarcheology.rotten_stairs": "腐烂的楼梯",
+  "block.betterarcheology.rotten_fence": "腐烂的栅栏",
+  "block.betterarcheology.rotten_fence_gate": "腐烂的栅栏门",
+  "block.betterarcheology.rotten_trapdoor": "腐烂的活板门",
+  "block.betterarcheology.rotten_door": "腐烂的门",
+  "block.betterarcheology.rotten_pressure_plate": "腐烂的压力板",
+  "block.betterarcheology.infested_mud_bricks": "被虫蛀的泥砖",
   "block.betterarcheology.cracked_mud_bricks": "裂纹泥砖",
   "block.betterarcheology.cracked_mud_brick_slab": "裂纹泥砖台阶",
   "block.betterarcheology.cracked_mud_brick_stairs": "裂纹泥砖楼梯",
   "block.betterarcheology.suspicious_red_sand": "可疑的红沙",
   "block.betterarcheology.suspicious_dirt": "可疑的泥土",
   "block.betterarcheology.fossiliferous_dirt": "含化石的泥土",
-  "block.betterarcheology.fossiliferous_dirt_tooltip": "也许其中有什么东西等待着发掘？",
+  "block.betterarcheology.chiseled_bone_block": "雕刻的骨块",
+  "block.betterarcheology.fossiliferous_dirt_tooltip": "也许有什么可以被发现？",
   "block.betterarcheology.villager_fossil": "村民化石",
-  "block.betterarcheology.villager_fossil_tooltip": "它变为化石的手臂或许可以展示什么东西",
-  "block.betterarcheology.villager_fossil_head": "村民颅骨化石",
-  "block.betterarcheology.villager_fossil_head_tooltip": "他们看起来还没进化到位⋯⋯",
-  "block.betterarcheology.villager_fossil_body": "村民躯干化石",
-  "block.betterarcheology.villager_fossil_body_tooltip": "这个可怖的东西提醒着人们曾有一座村庄消失在时间之中",
+  "block.betterarcheology.villager_fossil_tooltip": "它的化石化的手臂可以作为一种展示",
+  "block.betterarcheology.villager_fossil_head": "村民化石头骨",
+  "block.betterarcheology.villager_fossil_head_tooltip": "他们似乎没有进化很多...",
+  "block.betterarcheology.villager_fossil_body": "村民化石身体",
+  "block.betterarcheology.villager_fossil_body_tooltip": "一个被遗忘在时间中的村庄的骇人的提醒",
   "block.betterarcheology.ocelot_fossil": "豹猫化石",
-  "block.betterarcheology.ocelot_fossil_tooltip": "苦力怕害怕这个更甚于害怕活猫",
-  "block.betterarcheology.ocelot_fossil_head": "豹猫颅骨化石",
-  "block.betterarcheology.ocelot_fossil_head_tooltip": "不同于它们的后裔，这群豹猫有着长长的利齿",
-  "block.betterarcheology.ocelot_fossil_body": "豹猫躯干化石",
-  "block.betterarcheology.ocelot_fossil_body_tooltip": "看起来它们牺牲敏捷换来了力量",
-  "block.betterarcheology.sheep_fossil": "绵羊化石",
-  "block.betterarcheology.sheep_fossil_tooltip": "它的角让你想起了山羊的。也许这个也能吹得响？",
-  "block.betterarcheology.sheep_fossil_head": "绵羊颅骨化石",
-  "block.betterarcheology.sheep_fossil_head_tooltip": "也许它能撞出比山羊更深刻的凹痕",
-  "block.betterarcheology.sheep_fossil_body": "绵羊化石身体",
-  "block.betterarcheology.sheep_fossil_body_tooltip": "不再那么蓬松⋯⋯",
+  "block.betterarcheology.ocelot_fossil_tooltip": "爬行者似乎比猫更怕它们",
+  "block.betterarcheology.ocelot_fossil_head": "豹猫化石头骨",
+  "block.betterarcheology.ocelot_fossil_head_tooltip": "与他们的后代不同，他们有长而尖的牙齿",
+  "block.betterarcheology.ocelot_fossil_body": "豹猫化石身体",
+  "block.betterarcheology.ocelot_fossil_body_tooltip": "它看起来不那么敏捷但更强壮",
+  "block.betterarcheology.wolf_fossil": "狼化石",
+  "block.betterarcheology.wolf_fossil_tooltip": "骷髅似乎怕它",
+  "block.betterarcheology.wolf_fossil_head": "狼化石头骨",
+  "block.betterarcheology.wolf_fossil_head_tooltip": "相当尖的牙齿...",
+  "block.betterarcheology.wolf_fossil_body": "狼化石身体",
+  "block.betterarcheology.wolf_fossil_body_tooltip": "我可以摸摸它的肚子吗？",
+  "block.betterarcheology.sheep_fossil": "羊化石",
+  "block.betterarcheology.sheep_fossil_tooltip": "它的角让你想起了山羊角。它也能发出声音吗？",
+  "block.betterarcheology.sheep_fossil_head": "羊化石头骨",
+  "block.betterarcheology.sheep_fossil_head_tooltip": "这可能比山羊撞得更大",
+  "block.betterarcheology.sheep_fossil_body": "羊化石身体",
+  "block.betterarcheology.sheep_fossil_body_tooltip": "不再那么蓬松了...",
   "block.betterarcheology.chicken_fossil": "鸡化石",
-  "block.betterarcheology.chicken_fossil_tooltip": "靠近它的时候你感觉身体变轻了",
-  "block.betterarcheology.chicken_fossil_head": "鸡颅骨化石",
-  "block.betterarcheology.chicken_fossil_head_tooltip": "它的喙比你熟知的鸡更大",
-  "block.betterarcheology.chicken_fossil_body": "鸡躯干化石",
-  "block.betterarcheology.chicken_fossil_body_tooltip": "它的翅膀上也长有利爪；看起来这个种群也可能曾有过更长的尾巴",
-  "block.betterarcheology.creeper_fossil": "苦力怕化石",
-  "block.betterarcheology.creeper_fossil_tooltip": "它比真的苦力怕看着还吓人⋯⋯",
-  "block.betterarcheology.creeper_fossil_head": "苦力怕颅骨化石",
-  "block.betterarcheology.creeper_fossil_head_tooltip": "这张脸曾让你陷入无休止的战栗之中",
-  "block.betterarcheology.creeper_fossil_body": "苦力怕躯干化石",
-  "block.betterarcheology.creeper_fossil_body_tooltip": "所以这就是它力量的源头！",
+  "block.betterarcheology.chicken_fossil_tooltip": "你在它附近时感觉更轻",
+  "block.betterarcheology.chicken_fossil_head": "鸡化石头骨",
+  "block.betterarcheology.chicken_fossil_head_tooltip": "它的喙似乎比你习惯的鸡大",
+  "block.betterarcheology.chicken_fossil_body": "鸡化石身体",
+  "block.betterarcheology.chicken_fossil_body_tooltip": "它的翅膀也有尖爪。它们看起来像是曾经有一个更长的尾巴",
+  "block.betterarcheology.creeper_fossil": "爬行者化石",
+  "block.betterarcheology.creeper_fossil_tooltip": "它看起来比真正的爬行者更可怕...",
+  "block.betterarcheology.creeper_fossil_head": "爬行者化石头骨",
+  "block.betterarcheology.creeper_fossil_head_tooltip": "这张脸已经让你打了足够多的寒颤",
+  "block.betterarcheology.creeper_fossil_body": "爬行者化石身体",
+  "block.betterarcheology.creeper_fossil_body_tooltip": "所以这就是它的力量来源！",
+  "block.betterarcheology.guardian_fossil": "守卫者化石",
+  "block.betterarcheology.guardian_fossil_tooltip": "看起来比原版的更可怕...",
+  "block.betterarcheology.guardian_fossil_head": "守卫者化石头骨",
+  "block.betterarcheology.guardian_fossil_head_tooltip": "很难区分头和身体。",
+  "block.betterarcheology.guardian_fossil_body": "守卫者化石身体",
+  "block.betterarcheology.guardian_fossil_body_tooltip": "即使是它们的鳍也看起来很尖。",
   "block.betterarcheology.loot_vase": "古代花瓶",
   "block.betterarcheology.vase": "古代花瓶",
   "block.betterarcheology.loot_vase_creeper": "古代花瓶",
   "block.betterarcheology.vase_creeper": "古代花瓶",
+  "block.betterarcheology.loot_vase_green": "古代花瓶",
+  "block.betterarcheology.vase_green": "古代花瓶",
   "block.betterarcheology.evoker_trap": "唤魔者陷阱",
-  "advancements.shards": "碎片知识",
-  "advancements.shards.description": "找到一个神秘碎片",
-  "advancements.artifact": "一切都在逐渐明了",
-  "advancements.artifact.description": "使用文物碎片合成未经鉴定的文物，现在开始鉴定吧！",
-  "advancements.vase": "粉碎成功",
-  "advancements.vase.description": "通过打破花瓶以获得战利品",
-  "advancements.fossiliferous_dirt": "穿越时光",
-  "advancements.fossiliferous_dirt.description": "使用刷子在化石泥土上挖掘以揭示其秘密",
-  "advancements.fossil_found": "古代宝藏",
-  "advancements.fossil_found.description": "在化石泥土中发现一个化石",
-  "advancements.all_fossils_found": "古生物学家的荣耀",
+
+  "advancements.shards": "破碎的知识",
+  "advancements.shards.description": "找到一个神器碎片",
+  "advancements.artifact": "一切都在汇聚",
+  "advancements.artifact.description": "从碎片中制作一个未鉴定的神器。现在开始鉴定吧！",
+  "advancements.vase": "破碎的成功",
+  "advancements.vase.description": "通过打破花瓶获得战利品",
+  "advancements.fossiliferous_dirt": "穿越时间的挖掘",
+  "advancements.fossiliferous_dirt.description": "在含化石的泥土上使用刷子，揭示其秘密",
+  "advancements.fossil_found": "古老的宝藏",
+  "advancements.fossil_found.description": "在含化石的泥土中发现化石",
+  "advancements.all_fossils_found": "古生物学家的骄傲",
   "advancements.all_fossils_found.description": "收集所有的化石部分！",
+  "advancements.growth_totem": "在你最不期待的地方",
+  "advancements.growth_totem.description": "找到在死者中生长的生命",
+  "advancements.netherite_brush.title": "疯狂的投资",
+  "advancements.netherite_brush.description": "有时候，成功之路由一些令人难以理解的选择构成——但是永远不应该是选择泥土。",
+
   "block.betterarcheology.fossil_head_set": " [1/2]",
   "block.betterarcheology.fossil_body_set": " [2/2]",
+
   "item.betterarcheology.iron_brush": "铁刷",
   "item.betterarcheology.diamond_brush": "钻石刷",
   "block.betterarcheology.archeology_table": "考古学桌",
-  "item.betterarcheology.artifact_shards": "文物碎片",
-  "item.betterarcheology.unidentified_artifact": "未经鉴定的文物",
-  "item.betterarcheology.identified_artifact": "已鉴定的文物",
-  "item.betterarcheology.bomb": "锈蚀炸弹",
+  "item.betterarcheology.artifact_shards": "神器碎片",
+  "item.betterarcheology.unidentified_artifact": "未鉴定的神器",
+  "item.betterarcheology.identified_artifact": "已鉴定的神器",
+  "item.betterarcheology.bomb": "生锈的炸弹",
   "item.betterarcheology.torrent_totem": "洪流图腾",
   "item.betterarcheology.torrent_totem_description": "在陆地上使用以进行洪流冲刺",
   "item.betterarcheology.soul_totem": "灵魂图腾",
-  "item.betterarcheology.soul_totem_description": "能力：伤害目标并恢复生命",
+  "item.betterarcheology.soul_totem_description": "伤害目标并恢复健康",
+  "block.betterarcheology.growth_totem": "生长图腾",
+  "block.betterarcheology.growth_totem_tooltip": "当放置时，其光芒会加速附近作物的生长",
+  "block.betterarcheology.radiance_totem": "光辉图腾",
+  "block.betterarcheology.radiance_totem_tooltip": "其光芒揭示附近的实体并伤害怪物",
+  "block.betterarcheology.radiance_totem_message_0": "显示所有",
+  "block.betterarcheology.radiance_totem_message_1": "显示怪物",
+  "block.betterarcheology.radiance_totem_message_2": "显示动物",
+  "block.betterarcheology.radiance_totem_message_3": "显示玩家",
+
   "entity.minecraft.villager.betterarcheology.archeologist": "考古学家",
+
   "enchantment.betterarcheology.penetrating_strike": "穿透打击",
-  "item.betterarcheology.penetrating_strike_tooltip": "部分忽略保护附魔的效果",
-  "enchantment.betterarcheology.seas_bounty": "海之宝藏",
-  "item.betterarcheology.seas_bounty_tooltip": "从深海中捕获更多种类的宝藏",
+  "enchantment.betterarcheology.penetrating_strike.desc": "部分忽略保护附魔的效果",
+  "enchantment.betterarcheology.seas_bounty": "海之赏赐",
+  "enchantment.betterarcheology.seas_bounty.desc": "从深海中捕获更多种类的宝藏",
   "enchantment.betterarcheology.soaring_winds": "翱翔之风",
-  "item.betterarcheology.soaring_winds_tooltip": "利用风力在使用滑翔翼时提供起飞助力",
+  "enchantment.betterarcheology.soaring_winds.desc": "利用风力在使用鞘翅时提供启动加速",
   "enchantment.betterarcheology.tunneling": "挖掘",
-  "item.betterarcheology.tunneling_tooltip": "挖掘方块下面的方块"
+  "enchantment.betterarcheology.tunneling.desc": "也会破坏被挖掘方块下面的方块",
+
+  "filled_map.catacombs": "地下墓穴探险家地图",
+  "filled_map.light": "光辉神庙探险家地图",
+
+  "config.notify.disabled": "这个特性已经被配置文件关闭了！"
 }
