feat: lodestone recipe from 25w02a

--- a/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/betterarcheology/lang/zh_cn.json
+++ b/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/betterarcheology/lang/zh_cn.json
@@ -91,6 +91,7 @@
 
   "item.betterarcheology.iron_brush": "铁刷",
   "item.betterarcheology.diamond_brush": "钻石刷",
+  "item.betterarcheology.netherite_brush": "下界合金刷",
   "block.betterarcheology.archeology_table": "考古学桌",
   "item.betterarcheology.artifact_shards": "神器碎片",
   "item.betterarcheology.unidentified_artifact": "未鉴定的神器",
