--- a/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/createdeco/lang/zh_cn.json
+++ b/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/createdeco/lang/zh_cn.json
@@ -19,6 +19,7 @@
   "block.createdeco.blue_brass_lamp": "蓝色黄铜笼灯",
   "block.createdeco.blue_brick_slab": "皓石蓝砖台阶",
   "block.createdeco.blue_brick_stairs": "皓石蓝砖楼梯",
+  "block.createdeco.blue_brick_wall": "皓石蓝砖墙",
   "block.createdeco.blue_bricks": "皓石蓝砖块",
   "block.createdeco.blue_copper_lamp": "蓝色铜笼灯",
   "block.createdeco.blue_industrial_iron_lamp": "蓝色工业铁笼灯",
@@ -58,34 +59,75 @@
   "block.createdeco.copper_trapdoor": "铜活板门",
   "block.createdeco.copper_window": "铜窗户",
   "block.createdeco.copper_window_pane": "铜窗户板",
+  "block.createdeco.corner_blue_brick_slab": "长条皓石蓝砖台阶",
+  "block.createdeco.corner_blue_brick_stairs": "长条皓石蓝砖楼梯",
+  "block.createdeco.corner_blue_brick_wall": "长条皓石蓝砖墙",
+  "block.createdeco.corner_blue_bricks": "长条皓石蓝砖",
+  "block.createdeco.corner_dean_brick_slab": "长条赭砂黄砖台阶",
+  "block.createdeco.corner_dean_brick_stairs": "长条赭砂黄砖楼梯",
+  "block.createdeco.corner_dean_brick_wall": "长条赭砂黄砖墙",
+  "block.createdeco.corner_dean_bricks": "长条赭砂黄砖",
+  "block.createdeco.corner_dusk_brick_slab": "长条焦渣黑砖台阶",
+  "block.createdeco.corner_dusk_brick_stairs": "长条焦渣黑砖楼梯",
+  "block.createdeco.corner_dusk_brick_wall": "长条焦渣黑砖墙",
+  "block.createdeco.corner_dusk_bricks": "长条焦渣黑砖",
+  "block.createdeco.corner_pearl_brick_slab": "长条石灰白砖台阶",
+  "block.createdeco.corner_pearl_brick_stairs": "长条石灰白砖楼梯",
+  "block.createdeco.corner_pearl_brick_wall": "长条石灰白砖墙",
+  "block.createdeco.corner_pearl_bricks": "长条石灰白砖",
+  "block.createdeco.corner_red_brick_slab": "长条红砖台阶",
+  "block.createdeco.corner_red_brick_stairs": "长条红砖楼梯",
+  "block.createdeco.corner_red_brick_wall": "长条红砖墙",
+  "block.createdeco.corner_red_bricks": "长条红砖",
+  "block.createdeco.corner_scarlet_brick_slab": "长条绯岩红砖台阶",
+  "block.createdeco.corner_scarlet_brick_stairs": "长条绯岩红砖楼梯",
+  "block.createdeco.corner_scarlet_brick_wall": "长条绯岩红砖墙",
+  "block.createdeco.corner_scarlet_bricks": "长条绯岩红砖",
+  "block.createdeco.corner_umber_brick_slab": "长条熔渣棕砖台阶",
+  "block.createdeco.corner_umber_brick_stairs": "长条熔渣棕砖楼梯",
+  "block.createdeco.corner_umber_brick_wall": "长条熔渣棕砖墙",
+  "block.createdeco.corner_umber_bricks": "长条熔渣棕砖",
+  "block.createdeco.corner_verdant_brick_slab": "长条辉岩绿砖台阶",
+  "block.createdeco.corner_verdant_brick_stairs": "长条辉岩绿砖楼梯",
+  "block.createdeco.corner_verdant_brick_wall": "长条辉岩绿砖墙",
+  "block.createdeco.corner_verdant_bricks": "长条辉岩绿砖",
   "block.createdeco.cracked_blue_brick_slab": "裂纹皓石蓝砖台阶",
   "block.createdeco.cracked_blue_brick_stairs": "裂纹皓石蓝砖楼梯",
+  "block.createdeco.cracked_blue_brick_wall": "裂纹皓石蓝砖墙",
   "block.createdeco.cracked_blue_bricks": "裂纹皓石蓝砖",
   "block.createdeco.cracked_dean_brick_slab": "裂纹赭砂黄砖台阶",
   "block.createdeco.cracked_dean_brick_stairs": "裂纹赭砂黄砖楼梯",
+  "block.createdeco.cracked_dean_brick_wall": "裂纹赭砂黄砖墙",
   "block.createdeco.cracked_dean_bricks": "裂纹赭砂黄砖",
   "block.createdeco.cracked_dusk_brick_slab": "裂纹焦渣黑砖",
   "block.createdeco.cracked_dusk_brick_stairs": "裂纹焦渣黑砖楼梯",
+  "block.createdeco.cracked_dusk_brick_wall": "裂纹焦渣黑砖墙",
   "block.createdeco.cracked_dusk_bricks": "裂纹焦渣黑砖",
   "block.createdeco.cracked_pearl_brick_slab": "裂纹石灰白砖台阶",
   "block.createdeco.cracked_pearl_brick_stairs": "裂纹石灰白砖楼梯",
+  "block.createdeco.cracked_pearl_brick_wall": "裂纹石灰白砖墙",
   "block.createdeco.cracked_pearl_bricks": "裂纹石灰白砖",
   "block.createdeco.cracked_red_brick_slab": "裂纹红砖台阶",
   "block.createdeco.cracked_red_brick_stairs": "裂纹红砖楼梯",
+  "block.createdeco.cracked_red_brick_wall": "裂纹红砖墙",
   "block.createdeco.cracked_red_bricks": "裂纹红砖",
   "block.createdeco.cracked_scarlet_brick_slab": "裂纹绯岩红砖台阶",
   "block.createdeco.cracked_scarlet_brick_stairs": "裂纹绯岩红砖楼梯",
+  "block.createdeco.cracked_scarlet_brick_wall": "裂纹绯岩红砖墙",
   "block.createdeco.cracked_scarlet_bricks": "裂纹绯岩红砖",
   "block.createdeco.cracked_umber_brick_slab": "裂纹熔渣棕砖台阶",
   "block.createdeco.cracked_umber_brick_stairs": "裂纹熔渣棕砖楼梯",
+  "block.createdeco.cracked_umber_brick_wall": "裂纹熔渣棕砖墙",
   "block.createdeco.cracked_umber_bricks": "裂纹熔渣棕砖",
   "block.createdeco.cracked_verdant_brick_slab": "裂纹辉岩绿砖台阶",
   "block.createdeco.cracked_verdant_brick_stairs": "裂纹辉岩绿砖楼梯",
+  "block.createdeco.cracked_verdant_brick_wall": "裂纹辉岩绿砖墙",
   "block.createdeco.cracked_verdant_bricks": "裂纹辉岩绿砖",
   "block.createdeco.cyan_placard": "青色置物牌",
   "block.createdeco.cyan_shipping_container": "青色集装箱",
   "block.createdeco.dean_brick_slab": "赭砂黄砖台阶",
   "block.createdeco.dean_brick_stairs": "赭砂黄砖楼梯",
+  "block.createdeco.dean_brick_wall": "赭砂黄砖墙",
   "block.createdeco.dean_bricks": "赭砂黄砖块",
   "block.createdeco.decal_creeper": "苦力怕图案贴标",
   "block.createdeco.decal_cross": "交叉图案贴标",
@@ -109,6 +151,7 @@
   "block.createdeco.decal_warning": "警告图案贴标",
   "block.createdeco.dusk_brick_slab": "焦渣黑砖台阶",
   "block.createdeco.dusk_brick_stairs": "焦渣黑砖楼梯",
+  "block.createdeco.dusk_brick_wall": "焦渣黑砖墙",
   "block.createdeco.dusk_bricks": "焦渣黑砖块",
   "block.createdeco.gold_coinstack": "金硬币堆",
   "block.createdeco.gray_placard": "灰色置物牌",
@@ -163,59 +206,76 @@
   "block.createdeco.locked_zinc_door": "上锁的锌门",
   "block.createdeco.long_blue_brick_slab": "条状皓石蓝砖台阶",
   "block.createdeco.long_blue_brick_stairs": "条状皓石蓝砖楼梯",
+  "block.createdeco.long_blue_brick_wall": "条状皓石蓝砖墙",
   "block.createdeco.long_blue_bricks": "条状皓石蓝砖",
   "block.createdeco.long_dean_brick_slab": "条状赭砂黄砖台阶",
   "block.createdeco.long_dean_brick_stairs": "条状赭砂黄砖楼梯",
+  "block.createdeco.long_dean_brick_wall": "条状赭砂黄砖墙",
   "block.createdeco.long_dean_bricks": "条状赭砂黄砖",
   "block.createdeco.long_dusk_brick_slab": "条状焦渣黑砖台阶",
   "block.createdeco.long_dusk_brick_stairs": "条状焦渣黑砖楼梯",
+  "block.createdeco.long_dusk_brick_wall": "条状焦渣黑砖墙",
   "block.createdeco.long_dusk_bricks": "条状焦渣黑砖",
   "block.createdeco.long_pearl_brick_slab": "条状石灰白砖台阶",
   "block.createdeco.long_pearl_brick_stairs": "条状石灰白砖楼梯",
+  "block.createdeco.long_pearl_brick_wall": "条状石灰白砖墙",
   "block.createdeco.long_pearl_bricks": "条状石灰白砖",
   "block.createdeco.long_red_brick_slab": "条状红砖台阶",
   "block.createdeco.long_red_brick_stairs": "条状红砖楼梯",
+  "block.createdeco.long_red_brick_wall": "条状红砖墙",
   "block.createdeco.long_red_bricks": "条状红砖",
   "block.createdeco.long_scarlet_brick_slab": "条状绯岩红砖台阶",
   "block.createdeco.long_scarlet_brick_stairs": "条状绯岩红砖楼梯",
+  "block.createdeco.long_scarlet_brick_wall": "条状绯岩红砖墙",
   "block.createdeco.long_scarlet_bricks": "条状绯岩红砖",
   "block.createdeco.long_umber_brick_slab": "条状熔渣棕砖台阶",
   "block.createdeco.long_umber_brick_stairs": "条状熔渣棕砖楼梯",
+  "block.createdeco.long_umber_brick_wall": "条状熔渣棕砖墙",
   "block.createdeco.long_umber_bricks": "条状熔渣棕砖",
   "block.createdeco.long_verdant_brick_slab": "条状辉岩绿砖台阶",
   "block.createdeco.long_verdant_brick_stairs": "条状辉岩绿砖楼梯",
+  "block.createdeco.long_verdant_brick_wall": "条状辉岩绿砖墙",
   "block.createdeco.long_verdant_bricks": "条状辉岩绿砖",
   "block.createdeco.magenta_placard": "品红色置物牌",
   "block.createdeco.magenta_shipping_container": "品红色集装箱",
   "block.createdeco.mossy_blue_brick_slab": "覆苔皓石蓝砖台阶",
   "block.createdeco.mossy_blue_brick_stairs": "覆苔皓石蓝砖楼梯",
+  "block.createdeco.mossy_blue_brick_wall": "覆苔皓石蓝砖墙",
   "block.createdeco.mossy_blue_bricks": "覆苔皓石蓝砖",
   "block.createdeco.mossy_dean_brick_slab": "覆苔赭砂黄砖台阶",
   "block.createdeco.mossy_dean_brick_stairs": "覆苔赭砂黄砖楼梯",
+  "block.createdeco.mossy_dean_brick_wall": "覆苔赭砂黄砖墙",
   "block.createdeco.mossy_dean_bricks": "覆苔赭砂黄砖",
   "block.createdeco.mossy_dusk_brick_slab": "覆苔焦渣黑砖台阶",
   "block.createdeco.mossy_dusk_brick_stairs": "覆苔焦渣黑砖楼梯",
+  "block.createdeco.mossy_dusk_brick_wall": "覆苔焦渣黑砖墙",
   "block.createdeco.mossy_dusk_bricks": "覆苔焦渣黑砖",
   "block.createdeco.mossy_pearl_brick_slab": "覆苔石灰白砖台阶",
   "block.createdeco.mossy_pearl_brick_stairs": "覆苔石灰白砖楼梯",
+  "block.createdeco.mossy_pearl_brick_wall": "覆苔石灰白砖墙",
   "block.createdeco.mossy_pearl_bricks": "覆苔石灰白砖",
   "block.createdeco.mossy_red_brick_slab": "覆苔红砖台阶",
   "block.createdeco.mossy_red_brick_stairs": "覆苔红砖楼梯",
+  "block.createdeco.mossy_red_brick_wall": "覆苔红砖墙",
   "block.createdeco.mossy_red_bricks": "覆苔红砖",
   "block.createdeco.mossy_scarlet_brick_slab": "覆苔绯岩红砖台阶",
   "block.createdeco.mossy_scarlet_brick_stairs": "覆苔绯岩红砖楼梯",
+  "block.createdeco.mossy_scarlet_brick_wall": "覆苔绯岩红砖墙",
   "block.createdeco.mossy_scarlet_bricks": "覆苔绯岩红砖",
   "block.createdeco.mossy_umber_brick_slab": "覆苔熔渣棕砖台阶",
   "block.createdeco.mossy_umber_brick_stairs": "覆苔熔渣棕砖楼梯",
+  "block.createdeco.mossy_umber_brick_wall": "覆苔熔渣棕砖墙",
   "block.createdeco.mossy_umber_bricks": "覆苔熔渣棕砖",
   "block.createdeco.mossy_verdant_brick_slab": "覆苔辉岩绿砖台阶",
   "block.createdeco.mossy_verdant_brick_stairs": "覆苔辉岩绿砖楼梯",
+  "block.createdeco.mossy_verdant_brick_wall": "覆苔辉岩绿砖墙",
   "block.createdeco.mossy_verdant_bricks": "覆苔辉岩绿砖",
   "block.createdeco.netherite_coinstack": "下界合金硬币堆",
   "block.createdeco.orange_placard": "橙色置物牌",
   "block.createdeco.orange_shipping_container": "橙色集装箱",
   "block.createdeco.pearl_brick_slab": "石灰白砖台阶",
   "block.createdeco.pearl_brick_stairs": "石灰白砖楼梯",
+  "block.createdeco.pearl_brick_wall": "石灰白砖墙",
   "block.createdeco.pearl_bricks": "石灰白砖块",
   "block.createdeco.pink_placard": "粉红色置物牌",
   "block.createdeco.pink_shipping_container": "粉红色集装箱",
@@ -231,60 +291,79 @@
   "block.createdeco.red_zinc_lamp": "红色锌笼灯",
   "block.createdeco.scarlet_brick_slab": "绯岩红砖台阶",
   "block.createdeco.scarlet_brick_stairs": "绯岩红砖楼梯",
+  "block.createdeco.scarlet_brick_wall": "绯岩红砖墙",
   "block.createdeco.scarlet_bricks": "绯岩红砖块",
   "block.createdeco.short_blue_brick_slab": "密砌皓石蓝砖台阶",
   "block.createdeco.short_blue_brick_stairs": "密砌皓石蓝砖楼梯",
+  "block.createdeco.short_blue_brick_wall": "密砌皓石蓝砖墙",
   "block.createdeco.short_blue_bricks": "密砌皓石蓝砖",
   "block.createdeco.short_dean_brick_slab": "密砌赭砂黄砖台阶",
   "block.createdeco.short_dean_brick_stairs": "密砌赭砂黄砖楼梯",
+  "block.createdeco.short_dean_brick_wall": "密砌赭砂黄砖墙",
   "block.createdeco.short_dean_bricks": "密砌赭砂黄砖",
   "block.createdeco.short_dusk_brick_slab": "密砌焦渣黑砖台阶",
   "block.createdeco.short_dusk_brick_stairs": "密砌焦渣黑砖楼梯",
+  "block.createdeco.short_dusk_brick_wall": "密砌焦渣黑砖墙",
   "block.createdeco.short_dusk_bricks": "密砌焦渣黑砖",
   "block.createdeco.short_pearl_brick_slab": "密砌石灰白砖台阶",
   "block.createdeco.short_pearl_brick_stairs": "密砌石灰白砖楼梯",
+  "block.createdeco.short_pearl_brick_wall": "密砌石灰白砖墙",
   "block.createdeco.short_pearl_bricks": "密砌石灰白砖",
   "block.createdeco.short_red_brick_slab": "密砌红砖台阶",
   "block.createdeco.short_red_brick_stairs": "密砌红砖楼梯",
+  "block.createdeco.short_red_brick_wall": "密砌红砖墙",
   "block.createdeco.short_red_bricks": "密砌红砖",
   "block.createdeco.short_scarlet_brick_slab": "密砌绯岩红砖台阶",
   "block.createdeco.short_scarlet_brick_stairs": "密砌绯岩红砖楼梯",
+  "block.createdeco.short_scarlet_brick_wall": "密砌绯岩红砖墙",
   "block.createdeco.short_scarlet_bricks": "密砌绯岩红砖",
   "block.createdeco.short_umber_brick_slab": "密砌熔渣棕砖台阶",
   "block.createdeco.short_umber_brick_stairs": "密砌熔渣棕砖楼梯",
+  "block.createdeco.short_umber_brick_wall": "密砌熔渣棕砖墙",
   "block.createdeco.short_umber_bricks": "密砌熔渣棕砖",
   "block.createdeco.short_verdant_brick_slab": "密砌辉岩绿砖台阶",
   "block.createdeco.short_verdant_brick_stairs": "密砌辉岩绿砖楼梯",
+  "block.createdeco.short_verdant_brick_wall": "密砌辉岩绿砖墙",
   "block.createdeco.short_verdant_bricks": "密砌辉岩绿砖",
   "block.createdeco.tiled_blue_brick_slab": "密铺皓石蓝砖台阶",
   "block.createdeco.tiled_blue_brick_stairs": "密铺皓石蓝砖楼梯",
+  "block.createdeco.tiled_blue_brick_wall": "密铺皓石蓝砖墙",
   "block.createdeco.tiled_blue_bricks": "密铺皓石蓝砖",
   "block.createdeco.tiled_dean_brick_slab": "密铺赭砂黄砖台阶",
   "block.createdeco.tiled_dean_brick_stairs": "密铺赭砂黄砖楼梯",
+  "block.createdeco.tiled_dean_brick_wall": "密铺赭砂黄砖墙",
   "block.createdeco.tiled_dean_bricks": "密铺赭砂黄砖",
   "block.createdeco.tiled_dusk_brick_slab": "密铺焦渣黑砖台阶",
   "block.createdeco.tiled_dusk_brick_stairs": "密铺焦渣黑砖楼梯",
+  "block.createdeco.tiled_dusk_brick_wall": "密铺焦渣黑砖墙",
   "block.createdeco.tiled_dusk_bricks": "密铺焦渣黑砖",
   "block.createdeco.tiled_pearl_brick_slab": "密铺石灰白砖台阶",
   "block.createdeco.tiled_pearl_brick_stairs": "密铺石灰白砖楼梯",
+  "block.createdeco.tiled_pearl_brick_wall": "密铺石灰白砖墙",
   "block.createdeco.tiled_pearl_bricks": "密铺石灰白砖",
   "block.createdeco.tiled_red_brick_slab": "密铺红砖台阶",
   "block.createdeco.tiled_red_brick_stairs": "密铺红砖楼梯",
+  "block.createdeco.tiled_red_brick_wall": "密铺红砖墙",
   "block.createdeco.tiled_red_bricks": "密铺红砖",
   "block.createdeco.tiled_scarlet_brick_slab": "密铺绯岩红砖台阶",
   "block.createdeco.tiled_scarlet_brick_stairs": "密铺绯岩红砖楼梯",
+  "block.createdeco.tiled_scarlet_brick_wall": "密铺绯岩红砖墙"
   "block.createdeco.tiled_scarlet_bricks": "密铺绯岩红砖",
   "block.createdeco.tiled_umber_brick_slab": "密铺熔渣棕砖台阶",
   "block.createdeco.tiled_umber_brick_stairs": "密铺熔渣棕砖楼梯",
+  "block.createdeco.tiled_umber_brick_wall": "密铺熔渣棕砖墙",
   "block.createdeco.tiled_umber_bricks": "密铺熔渣棕砖",
   "block.createdeco.tiled_verdant_brick_slab": "密铺辉岩绿砖台阶",
   "block.createdeco.tiled_verdant_brick_stairs": "密铺辉岩绿砖楼梯",
+  "block.createdeco.tiled_verdant_brick_wall": "密铺辉岩绿砖墙",
   "block.createdeco.tiled_verdant_bricks": "密铺辉岩绿砖",
   "block.createdeco.umber_brick_slab": "熔渣棕砖台阶",
   "block.createdeco.umber_brick_stairs": "熔渣棕砖楼梯",
+  "block.createdeco.umber_brick_wall": "熔渣棕砖墙",
   "block.createdeco.umber_bricks": "熔渣棕砖块",
   "block.createdeco.verdant_brick_slab": "辉岩绿砖台阶",
   "block.createdeco.verdant_brick_stairs": "辉岩绿砖楼梯",
+  "block.createdeco.verdant_brick_wall": "辉岩绿砖墙",
   "block.createdeco.verdant_bricks": "辉岩绿砖块",
   "block.createdeco.white_shipping_container": "白色集装箱",
   "block.createdeco.yellow_andesite_lamp": "黄色安山笼灯",
