feat: change translate

--- a/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/miners_delight/lang/zh_cn.json
+++ b/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/miners_delight/lang/zh_cn.json
@@ -42,7 +42,7 @@
   "item.miners_delight.bat_wing": "蝙蝠翼",
   "item.miners_delight.beef_stew_cup": "牛肉炖杯",
   "item.miners_delight.beetroot_soup_cup": "甜菜汤杯",
-  "item.miners_delight.bone_broth_cup": "排骨汤杯",
+  "item.miners_delight.bone_broth_cup": "大骨汤杯",
   "item.miners_delight.bowl_of_stuffed_squid": "碗装填馅鱿鱼",
   "item.miners_delight.cave_carrot": "洞穴萝卜",
   "item.miners_delight.cave_soup": "洞穴萝卜汤",
@@ -67,7 +67,7 @@
   "item.miners_delight.powder_snow_cup": "细雪杯",
   "item.miners_delight.pumpkin_soup_cup": "南瓜汤杯",
   "item.miners_delight.rabbit_stew_cup": "兔肉煲杯",
-  "item.miners_delight.seasoned_arthropods": "季节性昆虫",
+  "item.miners_delight.seasoned_arthropods": "调味过的昆虫",
   "item.miners_delight.silverfish_eggs": "蠹虫卵",
   "item.miners_delight.smoked_bat_wing": "烟熏蝙蝠翼",
   "item.miners_delight.squid": "鱿鱼",
