fix(resourcepack): fix json error of language files

--- a/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/beautify/lang/zh_cn.json
+++ b/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/beautify/lang/zh_cn.json
@@ -104,5 +104,5 @@
   "sounds.beautify.bookstack_fall": "玩家：落在书堆上",
   "sounds.beautify.bookstack_next": "书堆：改变",
   "sounds.beautify.blinds_open": "百叶窗：打开",
-  "sounds.beautify.blinds_close": "百叶窗：关闭",
+  "sounds.beautify.blinds_close": "百叶窗：关闭"
 }
