--- a/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/createdeco/lang/zh_cn.json
+++ b/src/client-overrides/config/openloader/resources/tsng5_resourcespack/assets/createdeco/lang/zh_cn.json
@@ -347,7 +347,7 @@
   "block.createdeco.tiled_red_bricks": "密铺红砖",
   "block.createdeco.tiled_scarlet_brick_slab": "密铺绯岩红砖台阶",
   "block.createdeco.tiled_scarlet_brick_stairs": "密铺绯岩红砖楼梯",
-  "block.createdeco.tiled_scarlet_brick_wall": "密铺绯岩红砖墙"
+  "block.createdeco.tiled_scarlet_brick_wall": "密铺绯岩红砖墙",
   "block.createdeco.tiled_scarlet_bricks": "密铺绯岩红砖",
   "block.createdeco.tiled_umber_brick_slab": "密铺熔渣棕砖台阶",
   "block.createdeco.tiled_umber_brick_stairs": "密铺熔渣棕砖楼梯",
