feat(common): merge from upstream

--- a/src/client-overrides/config/openloader/resources/kots_resourcespack/assets/atmospheric/lang/zh_cn.json
+++ b/src/client-overrides/config/openloader/resources/kots_resourcespack/assets/atmospheric/lang/zh_cn.json
@@ -581,5 +581,6 @@
   "tooltip.atmospheric.unobtainable": "不可获得",
   "trim_pattern.atmospheric.apostle": "使徒盔甲纹饰",
   "trim_pattern.atmospheric.druid": "德鲁伊盔甲纹饰",
-  "trim_pattern.atmospheric.petrified": "石化盔甲纹饰"
+  "trim_pattern.atmospheric.petrified": "石化盔甲纹饰",
+  "_comment":"Oriun Tagayasu modpack(Shortname:OTSU) file comments, It acts to preserve the original author(TskimiSeiran) information. According to the Oriun Tagayasu modpack usage agreement, users are allowed to create and distribute on the basis of Oriun Tagayasu modpack, but the original modpack author information must be retained. Oriun Tagayasu modpack is free for users to download, if you spend real money in somewhere and download Oriun Tagayasu modpack, please avoid seller!"
 }
