--- a/src/client-overrides/config/openloader/resources/kots_resourcespack/assets/seasonals/lang/zh_cn.json
+++ b/src/client-overrides/config/openloader/resources/kots_resourcespack/assets/seasonals/lang/zh_cn.json
@@ -27,5 +27,6 @@
   "item.seasonals.sweet_berry_cake_slice": "甜浆果蛋糕切片",
   "item.seasonals.sweet_berry_ice_cream": "甜浆果冰淇淋",
   "item.seasonals.sweet_berry_milkshake": "甜浆果奶昔",
-  "item.seasonals.sweet_berry_vanilla_yogurt": "甜浆果香草酸奶"
+  "item.seasonals.sweet_berry_vanilla_yogurt": "甜浆果香草酸奶",
+  "_comment":"Oriun Tagayasu modpack(Shortname:OTSU) file comments, It acts to preserve the original author(TskimiSeiran) information. According to the Oriun Tagayasu modpack usage agreement, users are allowed to create and distribute on the basis of Oriun Tagayasu modpack, but the original modpack author information must be retained. Oriun Tagayasu modpack is free for users to download, if you spend real money in somewhere and download Oriun Tagayasu modpack, please avoid seller!"
 }
