--- a/src/client-overrides/config/openloader/resources/kots_resourcespack/assets/neapolitan/lang/zh_cn.json
+++ b/src/client-overrides/config/openloader/resources/kots_resourcespack/assets/neapolitan/lang/zh_cn.json
@@ -274,5 +274,6 @@
   "subtitles.neapolitan.item.banana_bunch.open": "打开香蕉捆",
   "subtitles.neapolitan.item.ice_cream.eat": "食用冰激凌",
   "subtitles.neapolitan.item.ice_cubes.eat": "食用小冰块",
-  "trim_pattern.neapolitan.primal": "原始盔甲纹饰"
+  "trim_pattern.neapolitan.primal": "原始盔甲纹饰",
+  "_comment":"Oriun Tagayasu modpack(Shortname:OTSU) file comments, It acts to preserve the original author(TskimiSeiran) information. According to the Oriun Tagayasu modpack usage agreement, users are allowed to create and distribute on the basis of Oriun Tagayasu modpack, but the original modpack author information must be retained. Oriun Tagayasu modpack is free for users to download, if you spend real money in somewhere and download Oriun Tagayasu modpack, please avoid seller!"
 }
