--- a/src/client-overrides/config/openloader/resources/kots_resourcespack/assets/the_bumblezone/lang/zh_cn.json
+++ b/src/client-overrides/config/openloader/resources/kots_resourcespack/assets/the_bumblezone/lang/zh_cn.json
@@ -1245,5 +1245,6 @@
     "tag.entity_type.the_bumblezone.queens_desire.fighting_the_swarm_silverfish": "蠹虫",
     "tag.entity_type.the_bumblezone.queens_desire.otherworldly_mites_endermite": "末影螨",
     "tag.entity_type.the_bumblezone.queens_desire.terror_fangs_cave_spider": "洞穴蜘蛛",
-    "tag.entity_type.the_bumblezone.queens_desire.too_many_legs_spiders": "各种非洞穴蜘蛛"
+    "tag.entity_type.the_bumblezone.queens_desire.too_many_legs_spiders": "各种非洞穴蜘蛛",
+    "_comment":"Oriun Tagayasu modpack(Shortname:OTSU) file comments, It acts to preserve the original author(TskimiSeiran) information. According to the Oriun Tagayasu modpack usage agreement, users are allowed to create and distribute on the basis of Oriun Tagayasu modpack, but the original modpack author information must be retained. Oriun Tagayasu modpack is free for users to download, if you spend real money in somewhere and download Oriun Tagayasu modpack, please avoid seller!"
 }
