fix(client): fix langs

--- a/src/client-overrides/config/openloader/resources/kots_resourcespack/assets/chloride/lang/zh_cn.json
+++ b/src/client-overrides/config/openloader/resources/kots_resourcespack/assets/chloride/lang/zh_cn.json
@@ -19,7 +19,7 @@
   "chloride.interface.fps.system.gpu_only": "仅显卡",
   "chloride.interface.fps.system.ram_only": "仅内存",
   "chloride.interface.fps.system.all": "显示全部",
-  "chloride.interface.fps": "帧 - 织彩钓月",
+  "chloride.interface.fps": "帧 - 耕云钓月",
   "chloride.interface.fps.min": "最低",
   "chloride.interface.fps.avg": "平均",
   "chloride.interface.fps.gpu": "显卡",
