--- a/src/client-overrides/config/openloader/resources/kots_resourcespack/assets/quitornot/lang/zh_cn.json
+++ b/src/client-overrides/config/openloader/resources/kots_resourcespack/assets/quitornot/lang/zh_cn.json
@@ -1,6 +1,6 @@
 {
   "screen.quitornot.confirm.title": "退出游戏前确认",
-  "screen.quitornot.confirm.title.game": "是否离开织彩钓月？我们欢迎您再次回来。",
+  "screen.quitornot.confirm.title.game": "是否离开耕云钓月？我们欢迎您再次回来。",
   "screen.quitornot.confirm.title.singleplayer": "返回到标题屏幕",
   "screen.quitornot.confirm.title.multiplayer": "返回到标题屏幕",
   "toast.quitornot.confirm.title": "退出游戏前确认",
