--- a/.pakku/overrides/kubejs/assets/kots/lang/en_us.json
+++ b/.pakku/overrides/kubejs/assets/kots/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "kubejs.message.enchanting_table_blocked.0": "§bYou, cannot use the enchanting table!",
+  "kubejs.message.enchanting_table_blocked.0": "§cYou, cannot use the enchanting table!",
   "kubejs.message.enchanting_table_blocked.1": "§bUse Village Trade, Blaze Enchanter or Crysyalline Flower instead.",
   "kubejs.tooltip.item.minecraft.golden_sword.0": "§a此工具已绑定投影模组工具。",
   "kubejs.tooltip.item.chimes.bamboo_chimes.0": "§a站在风铃附近,风铃能为你驱散接近的幻翼!",
@@ -169,9 +169,9 @@
   "kubejs.tooltip.item.majobroom.majo_cloth.0": "§b挂着魔女胸饰的魔女袍，覆盖着各种加护。穿上它可以加速扫帚。",
   "kubejs.tooltip.item.majobroom.majo_stocking.0": "§b丝袜……？大概是某位魔女的癖好。不知道为什么穿上它可以加速扫帚。",
   "kubejs.tooltip.item.majobroom.majo_boots.0": "§b魔女的靴子，覆盖着各种加护。穿上它可以加速扫帚。",
-  "kubejs.tooltip.item.minecraft.enchanting_table.0": "§c由于整合包玩法需要，此物品已被禁用，仅用作合成材料。若要附魔，您需要铁砧！",
+  "kubejs.tooltip.item.minecraft.enchanting_table.0": "§cYou, cannot use the enchanting table!",
+  "kubejs.tooltip.item.minecraft.enchanting_table.1": "§bUse Village Trade, Blaze Enchanter or Crysyalline Flower instead.",
   "kubejs.tooltip.item.l2complements.diffusion_wand.0": "§c由于此物品具有潜在的造成安全问题的风险，故禁用。",
-  "kubejs.tooltip.item.supplementaries.slingshot.0": "§c由于此物品具有潜在的造成安全问题的风险，故禁用。",
   "kubejs.tooltip.item.create_sa.block_picker.0": "§c由于此物品具有潜在的造成安全问题的风险，故禁用。",
   "kubejs.tooltip.item.quark.pickarang.0": "§c由于此物品具有潜在的造成安全问题的风险，故禁用。",
   "kubejs.tooltip.item.quark.flamerang.0": "§c由于此物品具有潜在的造成安全问题的风险，故禁用。"
