--- a/.pakku/client-overrides/kubejs/assets/kots/lang/zh_tw.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/zh_tw.json
@@ -1,6 +1,6 @@
 {
-  "kubejs.message.enchanting_table_blocked.0": "§cYou, cannot use the enchanting table!",
-  "kubejs.message.enchanting_table_blocked.1": "§bUse Village Trade, Blaze Enchanter or Crysyalline Flower instead.",
+  "kubejs.message.enchanting_table_blocked.0": "§b你不准附魔！",
+  "kubejs.message.enchanting_table_blocked.1": "§b通过村民交易、烈焰人附魔室或蜂蜜结晶花来获取附魔。",
   "kubejs.tooltip.item.minecraft.golden_sword.0": "§a此工具已绑定投影模组工具。",
   "kubejs.tooltip.item.chimes.bamboo_chimes.0": "§a站在风铃附近,风铃能为你驱散接近的幻翼!",
   "kubejs.tooltip.item.chimes.iron_chimes.0": "§a站在风铃附近,风铃能为你驱散接近的幻翼!",
@@ -42,7 +42,7 @@
   "kubejs.tooltip.item.quark.trowel.0": "§a能够随机放置物品栏内的方块。",
   "kubejs.tooltip.item.minecraft.torch.0": "§a手持时攻击生物会短暂让其着火。",
   "kubejs.tooltip.item.l2complements.eternium_hoe.0": "§a使用锄头左键可以打掉一大片草。小心作物！",
-  "kubejs.tooltip.item.tofucraft.bottle_soyoil.0": "§a核动力大豆油，神秘的异星科技。",
+  "kubejs.tooltip.item.tofucraft.bottle_soyoil.0": "§a核动力大豆油，神秘的异星科技。可用于给烈焰人燃烧室供能。",
   "kubejs.tooltip.item.minecraft.diorite.0": "§eOh, what is this?",
   "kubejs.tooltip.item.minecraft.diorite.1": "§eDiorite.",
   "kubejs.tooltip.item.irons_spellbooks.keeper_flamberge.0": "§e你们还不满意吗?!",
@@ -164,12 +164,12 @@
   "kubejs.tooltip.tag.forge.crops.oat.0": "§7营养丰富的谷物,富含纤维与蛋白质,有助于健康饮食。",
   "kubejs.tooltip.item.majobroom.broom.0": "§b听说，只要给扫帚施加魔法，",
   "kubejs.tooltip.item.majobroom.broom.1": "§b扫帚就可以变成美少女。",
-  "kubejs.tooltip.item.majobroom.majo_hat.0": "§bHat！传承了三代的魔女帽，覆盖着各种加护。戴上它可以加速扫帚。",
+  "kubejs.tooltip.item.majobroom.majo_hat.0": "§b传承了三代的魔女帽，覆盖着各种加护。戴上它可以加速扫帚。",
   "kubejs.tooltip.item.majobroom.majo_cloth.0": "§b挂着魔女胸饰的魔女袍，覆盖着各种加护。穿上它可以加速扫帚。",
   "kubejs.tooltip.item.majobroom.majo_stocking.0": "§b丝袜……？大概是某位魔女的癖好。不知道为什么穿上它可以加速扫帚。",
   "kubejs.tooltip.item.majobroom.majo_boots.0": "§b魔女的靴子，覆盖着各种加护。穿上它可以加速扫帚。",
-  "kubejs.tooltip.item.minecraft.enchanting_table.0": "§cYou, cannot use the enchanting table!",
-  "kubejs.tooltip.item.minecraft.enchanting_table.1": "§bUse Village Trade, Blaze Enchanter or Crysyalline Flower instead.",
+  "kubejs.tooltip.item.minecraft.enchanting_table.0": "§c由于整合包玩法需要，此物品已被禁用。",
+  "kubejs.tooltip.item.minecraft.enchanting_table.1": "§c你需要通过村民交易、烈焰人附魔室或蜂蜜结晶花来获取附魔。",
   "kubejs.tooltip.item.l2complements.diffusion_wand.0": "§c由于此物品具有潜在的造成安全问题的风险，故禁用。",
   "kubejs.tooltip.item.create_sa.block_picker.0": "§c由于此物品具有潜在的造成安全问题的风险，故禁用。",
   "kubejs.tooltip.item.quark.pickarang.0": "§c由于此物品具有潜在的造成安全问题的风险，故禁用。",
