feat(common): Tooltips English

--- a/.pakku/client-overrides/kubejs/assets/kots/lang/zh_cn.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/zh_cn.json
@@ -14,7 +14,7 @@
   "kubejs.tooltip.item.upgrade_aquatic.boiled_pickerelweed.0": "\u00a7a食用后恢复氧气值，适合水下探索。",
   "kubejs.tooltip.item.quark.grate.0": "\u00a7a动物会主动避免走上它,掉落物会穿过它。",
   "kubejs.tooltip.item.quark.bottled_cloud.0": "\u00a7a能够凭空放置",
-  "kubejs.tooltip.item.quark.bottled_cloud.1": "在高空作业时可用于辅助方块。",
+  "kubejs.tooltip.item.quark.bottled_cloud.1": "\u00a7a在高空作业时可用于辅助方块。",
   "kubejs.tooltip.item.quark.bottled_cloud.2": "\u00a7a获得方式:在达到云层后手持玻璃瓶右键。",
   "kubejs.tooltip.item.quark.chute.0": "\u00a7a通过漏斗、投掷器等途径进入溜槽的物品会从其正下方漏出。",
   "kubejs.tooltip.item.quark.chute.1": "\u00a7a可通过给予红石信号或在其下方放置方块来关闭自动漏出。",
@@ -29,13 +29,13 @@
   "kubejs.tooltip.item.quark.gravisand.0": "\u00a7a收到红石信号时会变成重力方块,当重力沙子落下过程中被其它方块阻挡,会变成不受重力影响的状态。",
   "kubejs.tooltip.item.biomemakeover.altar.0": "\u00a7a随机为已附魔物品中的某个词条突破一级,但物品会被附加诅咒。",
   "kubejs.tooltip.item.quark.ancient_tome.0": "\u00a7a可直接提升附魔书的附魔等级",
-  "kubejs.tooltip.item.quark.ancient_tome.1": "也可直接为物品上的附魔升级。",
-  "kubejs.tooltip.item.quark.ancient_tome.2": "\u00a7a但物品会被附加随机的诅咒。",
+  "kubejs.tooltip.item.quark.ancient_tome.1": "\u00a7a也可直接为物品上的附魔升级。",
+  "kubejs.tooltip.item.quark.ancient_tome.2": "\u00a7a但与祭坛不同，物品不会被附加随机的诅咒。",
   "kubejs.tooltip.item.biomemakeover.enchanted_totem.0": "\u00a7a生效后瞬间将持有者的血量恢复至最大上限的一半,并清除之前的所有负面效果。",
   "kubejs.tooltip.item.biomemakeover.witch_hat.0": "\u00a7a佩戴时,女巫将对佩戴者保持中立,并可体验女巫任务系统。",
   "kubejs.tooltip.item.supplementaries.key.0": "\u00a7a用于打开和解绑与之绑定的方块、箱子或门。",
   "kubejs.tooltip.item.supplementaries.flute.0": "\u00a7a手持时右击或左击某个宠物与之绑定",
-  "kubejs.tooltip.item.supplementaries.flute.1": "绑定的笛子仅召唤与之绑定的宠物。",
+  "kubejs.tooltip.item.supplementaries.flute.1": "\u00a7a绑定的笛子仅召唤与之绑定的宠物。",
   "kubejs.tooltip.item.supplementaries.flute.2": "\u00a7a可召唤离玩家较近的所有未坐下的宠物到玩家身边，",
   "kubejs.tooltip.item.supplementaries.antique_ink.0": "\u00a7a对显示文字的展示牌使用,使其字体变为一种复古字体。",
   "kubejs.tooltip.item.supplementaries.cog_block.0": "\u00a7a能够提供紧凑的垂直红石信号。",
@@ -81,9 +81,9 @@
   "kubejs.tooltip.item.youkaishomecoming.udumbara_flower.0": "\u00a7e开花短时间后就会凋谢，请尽快采摘！",
   "kubejs.tooltip.item.youkaishomecoming.udumbara_flower.1": "\u00a7e也是一味高级装饰品或食材。",
   "kubejs.tooltip.item.youkaishomecoming.udumbara_flower.2": "\u00a7e只在满月的夜晚下开花，天亮后会逐渐枯萎。",
-  "kubejs.tooltip.item.youkaishomecoming.udumbara_flower.3": "\u00a7e只在满月的夜晚下开花，天亮后会逐渐枯萎",
-  "kubejs.tooltip.item.youkaishomecoming.udumbara_flower.4": "\u00a7e即使身处幻想乡也难得一见的稀有花卉，",
-  "kubejs.tooltip.item.youkaishomecoming.udumbara_flower.5": "\u00a7e非满月的夜晚下，最高生长到成熟前一级阶段",
+  "kubejs.tooltip.item.youkaishomecoming.udumbara_flower.3": "\u00a7e即使身处幻想乡也难得一见的稀有花卉，",
+  "kubejs.tooltip.item.youkaishomecoming.udumbara_flower.4": "\u00a7e非满月的夜晚下，最高生长到成熟前一级阶段",
+  "kubejs.tooltip.item.youkaishomecoming.udumbara_flower.5": "",
   "kubejs.tooltip.item.minecraft.cooked_beef.0": "\u00a7e黑胡椒在哪里?",
   "kubejs.tooltip.item.youkaishomecoming.roe.0": "\u00a7e米饭在哪里?",
   "kubejs.tooltip.item.casualness_delight.tonkatsu.0": "\u00a7e哪里有饭来盖?",
@@ -165,7 +165,7 @@
   "kubejs.tooltip.item.majobroom.broom.0": "\u00a7b听说，只要给扫帚施加魔法，",
   "kubejs.tooltip.item.majobroom.broom.1": "\u00a7b扫帚就可以变成美少女。",
   "kubejs.tooltip.item.majobroom.majo_hat.0": "\u00a7b传承了三代的魔女帽，覆盖着各种加护。戴上它可以加速扫帚。",
-  "kubejs.tooltip.item.majobroom.majo_cloth.0": "\u00a7b挂着魔女胸饰的魔女袍，覆盖着各种加护。穿上它可以加速扫帚。",
+  "kubejs.tooltip.item.majobroom.majo_cloth.0": "\u00a7b挂着魔女胸针的魔女袍，覆盖着各种加护。穿上它可以加速扫帚。",
   "kubejs.tooltip.item.majobroom.majo_stocking.0": "\u00a7b丝袜……？大概是某位魔女的癖好。不知道为什么穿上它可以加速扫帚。",
   "kubejs.tooltip.item.majobroom.majo_boots.0": "\u00a7b魔女的靴子，覆盖着各种加护。穿上它可以加速扫帚。",
   "kubejs.tooltip.item.minecraft.enchanting_table.0": "\u00a7c由于整合包玩法需要，此物品已被禁用。",
