feat(common): Tooltips HK TW

--- a/.pakku/client-overrides/kubejs/assets/kots/lang/en_us.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/en_us.json
@@ -110,7 +110,7 @@
   "kubejs.tooltip.item.youkaishomecoming.raw_lamprey.0": "\u00a7eFreshwater or saltwater eel — I'll take both.",
   "kubejs.tooltip.item.youkaishomecoming.raw_lamprey_fillet.0": "\u00a7eTender slices of eel meat.",
   "kubejs.tooltip.item.youkaishomecoming.chest_of_heart_throbbing_surprise.0": "\u00a7eA chest full of cream and honey.",
-  "kubejs.tooltip.item.youkaishomecoming.chest_of_heart_throbbing_surprise.1": "Sweet lovers rejoice!",
+  "kubejs.tooltip.item.youkaishomecoming.chest_of_heart_throbbing_surprise.1": "\u00a7eSweet lovers rejoice!",
   "kubejs.tooltip.item.youkaishomecoming.chest_of_heart_throbbing_surprise.2": "\u00a7eHa! Did I scare you?",
   "kubejs.tooltip.item.youkaishomecoming.oily_bean_curd.0": "\u00a7eMaybe fox spirits would like it.",
   
