--- a/.pakku/client-overrides/kubejs/assets/kots/lang/zh_cn.json
+++ b/.pakku/client-overrides/kubejs/assets/kots/lang/zh_cn.json
@@ -43,13 +43,14 @@
   "kubejs.tooltip.item.minecraft.torch.0": "\u00a7a手持时攻击生物会短暂让其着火。",
   "kubejs.tooltip.item.l2complements.eternium_hoe.0": "\u00a7a使用锄头左键可以打掉一大片草。小心作物！",
   "kubejs.tooltip.item.tofucraft.bottle_soyoil.0": "\u00a7a核动力大豆油，神秘的异星科技。可用于给烈焰人燃烧室供能。",
+
   "kubejs.tooltip.item.minecraft.diorite.0": "\u00a7eOh, what is this?",
   "kubejs.tooltip.item.minecraft.diorite.1": "\u00a7eDiorite.",
   "kubejs.tooltip.item.irons_spellbooks.keeper_flamberge.0": "\u00a7e你们还不满意吗?!",
   "kubejs.tooltip.item.barbequesdelight.burnt_skewer.0": "\u00a7e天呐!你在做什么?",
   "kubejs.tooltip.item.etcetera.cotton_flower.0": "\u00a7eYou Gotta Move~",
-  "kubejs.tooltip.item.etcetera.cotton_seeds.0": "\u00a7e阳光彩虹小白马,滴滴滴滴滴哒~",
-  "kubejs.tooltip.item.etcetera.tidal_helmet.0": "\u00a7e钓织牌海洋之心能潜水头盔,爱好潜水的你值得拥有!",
+  "kubejs.tooltip.item.etcetera.cotton_seeds.0": "\u00a7e阳光彩虹小白马,滴滴哒滴滴哒~",
+  "kubejs.tooltip.item.etcetera.tidal_helmet.0": "\u00a7e织彩牌海洋之心能潜水头盔,爱好潜水的你值得拥有!",
   "kubejs.tooltip.item.minecraft.iron_helmet.0": "\u00a7e幸好我有铁头功!",
   "kubejs.tooltip.item.candlelight.cooking_hat.0": "\u00a7eCooking Or Cooker?",
   "kubejs.tooltip.item.fruitsdelight.bayberry.0": "\u00a7e红实缀青枝，烂漫照前坞。",
@@ -75,7 +76,7 @@
   "kubejs.tooltip.item.youkaishomecoming.raw_lamprey.0": "\u00a7e淡水鳗还是咸水鳗我都要。",
   "kubejs.tooltip.item.youkaishomecoming.raw_lamprey_fillet.0": "\u00a7e鲜美的鳗鱼肉片。",
   "kubejs.tooltip.item.youkaishomecoming.chest_of_heart_throbbing_surprise.0": "\u00a7e一满箱的奶油与蜂蜜",
-  "kubejs.tooltip.item.youkaishomecoming.chest_of_heart_throbbing_surprise.1": "甜味爱好者狂喜!",
+  "kubejs.tooltip.item.youkaishomecoming.chest_of_heart_throbbing_surprise.1": "\u00a7e甜味爱好者狂喜!",
   "kubejs.tooltip.item.youkaishomecoming.chest_of_heart_throbbing_surprise.2": "\u00a7e哈!吓到了吗?",
   "kubejs.tooltip.item.youkaishomecoming.oily_bean_curd.0": "\u00a7e也许狐妖会喜欢它。",
   "kubejs.tooltip.item.youkaishomecoming.udumbara_flower.0": "\u00a7e开花短时间后就会凋谢，请尽快采摘！",
@@ -120,6 +121,7 @@
   "kubejs.tooltip.item.artifacts.everlasting_beef.1": "\u00a7e我不是很懂为什么你非要天天吃这个。",
   "kubejs.tooltip.item.artifacts.eternal_steak.0": "\u00a7e你大概是从不种田的冒险玩家吧。",
   "kubejs.tooltip.item.artifacts.eternal_steak.1": "\u00a7e我不是很懂为什么你非要天天吃这个。",
+
   "kubejs.tooltip.tag.forge.pasta.0": "\u00a77面条这个碳水,谁拼命吃都得胖。",
   "kubejs.tooltip.tag.forge.chocolate.0": "\u00a77食之甘甜滑润,入口回味无穷。",
   "kubejs.tooltip.tag.forge.fruits.passion_fruit.0": "\u00a77一种浆果,内部多汁,有许多种子。",
@@ -162,12 +164,14 @@
   "kubejs.tooltip.tag.forge.crops.cucumber.0": "\u00a77清爽可口,非常适合腌制。",
   "kubejs.tooltip.tag.forge.crops.barley.0": "\u00a77一种深色的谷物,在加工后比小麦具有更浓郁的土味。",
   "kubejs.tooltip.tag.forge.crops.oat.0": "\u00a77营养丰富的谷物,富含纤维与蛋白质,有助于健康饮食。",
+
   "kubejs.tooltip.item.majobroom.broom.0": "\u00a7b听说，只要给扫帚施加魔法，",
   "kubejs.tooltip.item.majobroom.broom.1": "\u00a7b扫帚就可以变成美少女。",
   "kubejs.tooltip.item.majobroom.majo_hat.0": "\u00a7b传承了三代的魔女帽，覆盖着各种加护。戴上它可以加速扫帚。",
   "kubejs.tooltip.item.majobroom.majo_cloth.0": "\u00a7b挂着魔女胸针的魔女袍，覆盖着各种加护。穿上它可以加速扫帚。",
   "kubejs.tooltip.item.majobroom.majo_stocking.0": "\u00a7b丝袜……？大概是某位魔女的癖好。不知道为什么穿上它可以加速扫帚。",
   "kubejs.tooltip.item.majobroom.majo_boots.0": "\u00a7b魔女的靴子，覆盖着各种加护。穿上它可以加速扫帚。",
+
   "kubejs.tooltip.item.minecraft.enchanting_table.0": "\u00a7c由于整合包玩法需要，此物品已被禁用。",
   "kubejs.tooltip.item.minecraft.enchanting_table.1": "\u00a7c你需要通过村民交易、烈焰人附魔室或蜂蜜结晶花来获取附魔。",
   "kubejs.tooltip.item.l2complements.diffusion_wand.0": "\u00a7c由于此物品具有潜在的造成安全问题的风险，故禁用。",
